[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "YavuzMSA"
version = "0.1.0"
authors = [
  { name="Yavuz Selim Özkan" }
]
description = "A Multiple Sequence Alignment library implementing the MAFFT algorithm."
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21.0"
]

[project.urls]
"Homepage" = "https://github.com/yavuzselimozkan/YavuzMSA"